--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.26.0",
     "buffer": "^6.0.3",
     "build-doc-parse": "^0.0.10",
+    "chart.js": "^4.4.4",
     "clsx": "^1.1.1",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.4",
@@ -34,6 +35,7 @@
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-edit-text": "^5.1.1",
