--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "stream": "^0.0.2",
     "styled-components": "^6.0.5",
     "util": "^0.12.5",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "scripts": {
