--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/lab": "^5.0.0-alpha.123",
-    "@mui/material": "^5.11.13",
+    "@mui/material": "^5.16.14",
+    "@mui/x-date-pickers": "^7.23.6",
     "@syncfusion/ej2-react-spreadsheet": "^22.1.34",
     "autosuggest-highlight": "^3.2.0",
     "axios": "^0.24.0",
@@ -19,18 +20,20 @@
     "clsx": "^1.1.1",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.4",
-    "date-fns": "^2.26.0",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "formik": "^2.2.9",
     "html-react-parser": "^4.2.2",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "loader-utils": "^3.2.1",
     "lodash": "^4.17.19",
     "merge": "^2.1.1",
     "moment": "^2.29.1",
     "notistack": "^3.0.1",
+    "npm": "^11.0.0",
     "papaparse": "^5.4.1",
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
@@ -39,6 +42,7 @@
     "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-edit-text": "^5.1.1",
+    "react-icons": "^5.4.0",
     "react-material-ui-form-validator": "^3.0.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-quill": "^2.0.0",
